--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'eHelvetica Neu',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
 }
 
 code {
@@ -13,70 +12,10 @@ code {
     monospace;
 }
 
-
-
-.locked-page {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 1); /* This adds a semi-transparent black overlay */
-  z-index: 9999; /* Adjust the z-index as needed to ensure it's on top of other elements */
+@font-face {
+  font-family: 'OldLondon';
+  src: url('./assets/fonts/oldlondon/OldLondon.ttf') format('truetype'),
+    url('./assets/fonts/oldlondon/Olondon_.otf') format('otf');
 }
 
-ul, ol {
-  list-style: none;
-}
-
-.title-rectangle {
-  background-color: #f0f0f0; /* Set the background color of the rectangle */
-  color: black; /* Set the text color of the title */
-  padding: 15px; /* Adjust the padding as needed */
-  text-align: center; /* Center the text within the rectangle */
-  width: 15%; /* Adjust the width as needed */
-  border: 5cm, solid, black;
-  margin-left: 42.5%;
-  font-family: 'Graduate, serif, bold';
-  font-weight: 900;
-  
-}
-
-.nav-item {
-  cursor: pointer;
-  text-decoration: none;
-  outline:none;
-  border: none;
-}
-
-.nav-item:hover {
-  text-decoration: none; /* Optional: add an underline on hover */
-}
-
-.nav-item:focus {
-  outline: none; /* Optional: avoid default outline on focus */
-
-}
-
-.bottom-nav {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 5%;
-  background-color: #f0f0f0;
-  padding: 10px; /* Adjust as needed */
-  box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.1); /* Optional: add a shadow */
-}
-
-.about-page {
-  background-image: url('bgdo.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 100vh; /* Adjust the height as needed */
-  color: white; /* Set text color to contrast with the background */
-  /* Add any additional styles for your About page */
-}
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
