--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,37 @@
+@import 'tailwindcss';
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  @apply bg-black text-gray-200;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.text-button {
+  @apply mt-6 px-4 py-2 rounded border;
 }
 
-@font-face {
-  font-family: 'OldLondon';
-  src: url('./assets/fonts/oldlondon/OldLondon.ttf') format('truetype'),
-    url('./assets/fonts/oldlondon/Olondon_.otf') format('otf');
+.fly-hover {
+  @apply transition-all duration-200 ease-in-out relative;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+.fly-hover:hover {
+  @apply transform -translate-y-0.5;
+}
+
+.section-container {
+  @apply mx-auto px-8 pt-12 pb-20 max-w-5xl;
+}
+
+.flex-centered {
+  @apply flex flex-col justify-center items-center;
+}
+
+.body1 {
+  @apply text-lg text-center;
+}
+
+h1 {
+  @apply text-4xl font-bold text-center text-gray-700;
+}
+
+h1.pb {
+  @apply mb-4;
+}
