--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@ body {
   @apply mx-auto px-8 pt-12 pb-20 max-w-5xl;
 }
 
+.first-section {
+  @apply pt-28;
+}
+
 .flex-centered {
   @apply flex flex-col justify-center items-center;
 }
